test/require-labels/test-labeled-additional.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: team
    environment: prod
  name: test-labeled-additional
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
