test/require-labels/test-labeled-blank-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: ""
  name: test-labeled-blank
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
