test/require-labels/test-labeled-dash-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: team-1
  name: test-labeled-dash
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
