test/require-labels/test-labeled-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: backend
  name: test-labeled
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
