test/require-labels/test-labeled-underscore-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: dev_ops
  name: test-labeled-underscore
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
