test/require-labels/test-other-labeled-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
  name: test-other-labeled
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
