test/require-labels/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: default
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
