test/require-labels/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-labels
policies:
  - require-labels-clusterpolicy.yaml
resources:
  - test-labeled-pod.yaml
  - test-labeled-additional.pod.yaml
  - test-labeled-underscore-pod.yaml
  - test-labeled-dash-pod.yaml
  - test-labeled-numbers-pod.yaml
  - test-other-labeled-pod.yaml
  - test-pod.yaml
  - test-labeled-blank-pod.yaml
results:
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled-additional
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled-underscore
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled-dash
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled-numbers
    kind: Pod
    result: pass
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test
    kind: Pod
    result: fail
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-other-labeled
    kind: Pod
    result: fail
  - policy: require-labels
    rule: check-team
    resources: 
    - default/test-labeled-blank
    kind: Pod
    result: fail
